--- a/Practice Sets/Set 7/set7.html
+++ b/Practice Sets/Set 7/set7.html
@@ -64,11 +64,15 @@
         // }
 
         let arr = ['Mohit', 'is', 'a', 'Succesfull', 'Coder', 'and', 'Trader'];
-        let result = '';
-        for(let i = 0; i < arr.length; i++){
-            result += (arr[i] + ' ');
-        }
-        console.log(result);
+        // let result = '';
+        // for(let i = 0; i < arr.length; i++){
+        //     result += (arr[i] + ' ');
+        // }
+        // console.log(result);
+
+                //or
+
+        console.log(arr.join(' '));
 
             
     </script>
